test/libsolidity/syntaxTests/parsing/missing_variable_name_in_declaration.sol
contract test {
    uint256 ;
}
// ----
// ParserError: Expected identifier, got 'Semicolon'
